--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
 agp = "8.6.1"
+core = "1.15.0"
+coreKtx = "2.2.0"
 flexbox = "3.0.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -14,6 +16,8 @@ workRuntime = "2.10.0"
 places = "4.1.0"
 
 [libraries]
+core = { module = "androidx.core:core", version.ref = "core" }
+core-ktx = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
 flexbox = { module = "com.google.android:flexbox", version.ref = "flexbox" }
 google-flexbox = { module = "com.google.android.flexbox:flexbox", version.ref = "flexbox" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
